samples/_failures_safe/1761140191_1f31e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33d37478.c: In function ‘main’:
./samples/SAFE/__tmp_33d37478.c:132:5: error: expected declaration or statement at end of input
  132 |     printf("=========================\n");
      |     ^~~~~~
